[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Reza Tabrizi",email = "rtabrizi03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.0"
gunicorn = "^21.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
